--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 # -- Example FILE: pyproject.toml
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "test.settings"
+DJANGO_SETTINGS_MODULE = "small_shop.settings"
 # -- recommended but optional:
 python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
